feat: phone validation
