# docs/swagger.json
@@ -596,7 +596,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.AuthResponse"
+                            "$ref": "#/definitions/dto.AdminAuthResponse"
                         }
                     },
                     "400": {
@@ -700,7 +700,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.AuthResponse"
+                            "$ref": "#/definitions/dto.AdminAuthResponse"
                         }
                     },
                     "400": {
@@ -2503,6 +2503,20 @@
                     "type": "string"
                 },
                 "worker_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.AdminAuthResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "coffee_shop_id": {
+                    "type": "string"
+                },
+                "refresh_token": {
                     "type": "string"
                 }
             }
